# torch-gfrft

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  src.ipynb  tox.ini
.github/workflows/: build.yml
tests/: test_gft.py  test_sort_complex.py  test_torch_gfrt.py
torch_gfrft/: __init__.py  complex_sort.py  gfrft.py  gft.py  layer.py  utils.py
torch_gfrt/: __init__.py  complex_sort.py  gfrt.py  gft.py  layer.py  utils.py
