[tool.poetry]
name = "torch-gfrft"
version = "0.3.0"
description = "Python project contains all the boilerplate you need to create a Python package."
authors = ["Tuna Alikaşifoğlu <tunakasif@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "2.0.0"
numpy = "^1.26.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
tox = "^4.11.3"
commitizen = "^3.12.0"
bandit = "^1.7.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.26.0"
ipython = "^8.18.0"

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.3.0"
version_files = [
    "pyproject.toml:^version",
    "torch_gfrft/__init__.py:__version__",
]
major_version_zero = true
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
